28Feb23=======================================================================
1. Default ip addresses ON in PC92 C records, disable PC92 A D record output.
2. Add CTY-3308 prefixes.
3. Fix gen_usdb_data.pl (add missing use DXUtil), update current location of
   official FCC databases.
14Feb23=======================================================================
1. Attempt to be more M$ Windows compatible. This basically is to do with the
   unfortunate fact that most of the Windows perl cannot do, or simulate 
   spawning (running another process in parallel) and/or Mojolicious cannot
   handle coping with one or more versions of these simulations. 

   I don't have a windows perl available to me at moment so I can only
   simulate running under windows by setting a variable.

   You need to know that running any version of DXSpider on Windows will do
   all long running commands in line. Much as the 'master' branch does. So
   running large nodes on Windows boxes with versions of perl that do not
   support running spawned processes continues to be contra-indicated. Much 
   as it has ALWAYS been. 
04Feb23=======================================================================
1. Fixed sh/log so that callsigns beginning with a digit (or several) are 
   printed rather than being ignored.
   This affects: show/ann, chat, log, rcmd and wx
03Feb23=======================================================================
1. Fix is_ipaddr to accept trailing '::'  on IPV6 addresses.
2. Fix and extend the TEST program 'showdx' so that it now works on the mojo
   branch. Type 'showxd -?' for more information or read the source. This is 
   NOT a user program, but is will accept most sh/dx expressions. 
3. Fix create_master_badip_files.pl so that it does not emit IP addresses
   that the system is_ipaddr() function fails.
01Feb23=======================================================================